# AISD_Labs_2

Lab1/: CMakeLists.txt  add_task.cc  add_task_test.cc  main.cc  task.cc  test.cc
Lab2/: CMakeLists.txt  Pirson.txt  functions_test.cc  interface_task.cc  main.cc  task_test.cc
Lab3/: CMakeLists.txt  DFS.txt  Dijkstra's_algorithm.txt  Graph.cpp  main.cc  task_test.cpp
